<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/emeTrackingHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <com.bg7yoz.ft8cn.eme.ui.MoonSkyView
            android:id="@+id/emeMoonSkyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.bg7yoz.ft8cn.eme.ui.DopplerCorrectionView
            android:id="@+id/emeDopplerCorrectionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/emeTrackingStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <CheckBox
            android:id="@+id/emeUseCurrentRigFrequencyCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eme_use_current_rig_frequency" />

        <CheckBox
            android:id="@+id/emeAllowTxCorrectionCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eme_allow_correction_while_transmitting" />

        <EditText
            android:id="@+id/emeMaxCorrectionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eme_max_correction_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/emeMinElevationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eme_min_elevation_hint"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/emeUpdateIntervalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eme_update_interval_hint"
            android:inputType="number" />

    </LinearLayout>
</ScrollView>
